# swagger_server/models/__init__.py
@@ -1,0 +1,7 @@
+# coding: utf-8
+
+# flake8: noqa
+from __future__ import absolute_import
+# import models into model package
+from swagger_server.models.data_utility import DataUtility
+from swagger_server.models.refinement_request import RefinementRequest
